Added jquery logo to the <li> of skills
Also added alt attribute for screenshots

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section class="projects">
             <div class="wrapper">
                 <article>
-                    <img src="screenshots/shortly.svg" alt="">
+                    <img src="screenshots/shortly.svg" alt="deektionary website screenshot">
                     <div class="description">
                         <header>
                             <h3>Shortly</h3>
@@ -53,7 +53,7 @@
                     </div>
                 </article>
                 <article>
-                    <img src="screenshots/deektionary.svg" alt="">
+                    <img src="screenshots/deektionary.svg" alt="deektionary website screenshot">
                     <div class="description">
                         <header>
                             <h3>Deektionary</h3>
@@ -120,6 +120,7 @@
                             <li><img src="assets/sass-logo.svg" alt="sass logo"><p>SASS</p></li>
                             <li><img src="assets/js-logo.svg" alt="javascript logo"><p>JavaScript</p></li>
                             <li><img src="assets/react-logo.svg" alt="javascript logo"><p>React</p></li>
+                            <li><img src="assets/jquery-logo.svg" alt="jquery logo" class="jquery-logo"><p>jQuery</p></li>
                         </ul>
                     </div>
                 </div>
