Added bootstrap logo

--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
                             <li><img src="assets/sass-logo.svg" alt="sass logo"><p>SASS</p></li>
                             <li><img src="assets/js-logo.svg" alt="javascript logo"><p>JavaScript</p></li>
                             <li><img src="assets/react-logo.svg" alt="javascript logo"><p>React</p></li>
+                            <li><img src="assets/bootstrap-logo.svg" alt="bootstrap logo"><p>Bootstrap</p></li>
                             <li><img src="assets/jquery-logo.svg" alt="jquery logo" class="jquery-logo"><p>jQuery</p></li>
+                            
                         </ul>
                     </div>
                 </div>
